--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap');
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Assistant", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -11,8 +13,7 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  height: 100%;
   min-width: 320px;
   min-height: 100vh;
 }
