feat(ReportForm.tsx): add date and time inputs

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,11 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
+
+.MuiTimePickerToolbar-hourMinuteLabel {
+  flex-direction: row-reverse;
+}
+
+.MuiPickersSectionList-root {
+  justify-content: flex-end;
+}
