--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap');
 
+* {
+  transition: background-color 200ms ease, color 200ms ease;
+}
+
 :root {
   font-family: 'Assistant', sans-serif;
   line-height: 1.5;
